--- a/Day - 1/index.html
+++ b/Day - 1/index.html
@@ -10,6 +10,7 @@
     <p>This is a simple HTML document.</p>
     <script>
         console.log("Hello, World!");
+        console.log("Sojib");
         document.addEventListener("DOMContentLoaded", function() {
             console.log("DOM fully loaded and parsed");
         });
