--- a/Day - 1/index.html
+++ b/Day - 1/index.html
@@ -1,19 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src = "script.js"></script>
 </head>
 <body>
     <h1>Welcome to My Web Page</h1>
     <p>This is a simple HTML document.</p>
-    <script>
-        console.log("Hello, World!");
-        console.log("Sojib");
-        document.addEventListener("DOMContentLoaded", function() {
-            console.log("DOM fully loaded and parsed");
-        });
-    </script>
 </body>
 </html>
